[metadata]
name = toy-urloop
version = 0.1.0
description = Proof-of-concept asyncio loop atop io_uring API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/versusvoid/toy-urloop
project_urls =
    Bug Tracker = https://github.com/versusvoid/toy-urloop/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10

[options.packages.find]
where = src
